@startuml
package hal {
    interface PulseWidthModulation {
        +SetDuty(dutyPercent: uint8): void
        +SetPulse(pulseOn: uint32, period: uint32): void
        +Start(): void
        +Stop(): void
    }
}

interface IServo {
    +SetAngle(angle: float): void
}

class Servo {
    -pwm: PulseWidthModulation
    +Servo(pwm: PulseWidthModulation)
    +SetAngle(angle: float): void
}

class Finger {
    -servo: IServo
    -openAngle: float
    -closedAngle: float
    +Finger(servo: IServo, openAngle: float, closedAngle: float)
    +Open(percent: float): void
}

interface IHand {
    +OpenFinger(finger: uint8, percent: float): bool
    +OpenFingers(percent: float): void
    +OpenFinger(finger: uint8): bool
    +CloseFinger(finger: uint8): bool
    +OpenFingers(): void
    +CloseFingers(): void
    +GetFingerCount(): size_t
}

class Hand<FingerCount> {
    -fingers: Finger&[]
    +Hand(fingers: Finger&[])
}

class HandBuilder<FingerCount> {
    -hand: Hand<FingerCount>
    -fingers: Finger[FingerCount]
    +AttachServoToFinger(finger: uint8, servo: IServo,
    \topenAngle: float, closedAngle: float): void
    +CreateHand(): IHand
}

PulseWidthModulation --o Servo
Servo ..|> IServo
IServo --o Finger
Finger ..* Hand
Hand ..|> IHand
HandBuilder .u.> Hand : creates
HandBuilder .u.> IServo : wires

@enduml
